[package]
name = "ethereum-crypto"
version = "0.1.2"
edition = "2021"
description = "Public-private key management system for Ethereum"
repository = "https://github.com/AndoroidX/ethereum-crypto"
authors = ["Andrii Tretyakov <andrii@tretyakov.xyz>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "^0.21", features = ["global-context", "rand", "rand-std"]}
sha3 = "0.10.2"
hex = "0.4.3"
thiserror = "^1.0"